--- a/FrontEND/Page/Login/login.css
+++ b/FrontEND/Page/Login/login.css
@@ -680,6 +680,70 @@ input {
 
 
 
+/*alerta personalizada  2  :)*/
+
+#fondoOscuro2 {
+  display: none; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); 
+  z-index: 1000;
+}
+
+
+#alertaPersonalizada2 {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(206, 224, 255);
+  width: 700px;
+  border: 2px solid black;
+  border-radius: 15px;
+  box-shadow: 0px 0px 799999px 90px black;
+  z-index: 1000;
+}
+.p-alerta1{
+  text-align: center;
+  font-size: 19px;
+  padding-top: 50px;
+}
+.p-alerta2{
+  text-align: center;
+  font-size: 19px;
+  padding-top: 17px;
+}
+.botonyalerta{
+  height: 100%;
+}
+.boton-alerta{
+  display: flex;
+  height: 100%;
+  margin: 0 auto;
+  justify-content: end;
+  align-items: end;
+}
+#alertaPersonalizada2 button {
+  display: flex;
+  margin: 40px auto;
+  padding: 10px 50px;
+  border-radius: 10px;
+  border: 1px solid var(--secundario-color);
+  background-color: var(--principal-color);
+  box-shadow: 0 0 10px 1px black;
+  cursor: pointer;
+}
+
+#alertaPersonalizada2 button:hover{
+  opacity: .7;
+}
+
+
+
 
 /* FOOTER */
 
@@ -687,6 +751,7 @@ footer {
   width: 100%;
   background-color: #979292;
   min-height: 170px;
+  margin-top: 80px;
 }
 
 .footer-title {
